<?xml version="1.0"?>
<package format="2">
    <name>bluerov_launch</name>
    <version>0.0.1</version>
    <description>The bluerov_launch package</description>

    <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>
    <license>BSD 3-Clause License</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>bar30_depth</depend>
    <depend>bluerov_control</depend>
    <depend>sonar_oculus</depend>
    <depend>rti_dvl</depend>
    <depend>imu_vn_100</depend>

    <depend>socat</depend>
    <!-- <depend>python-MAVProxy</depend> -->
    <depend>python-pymavlink</depend>
    <depend>cv_bridge</depend>
</package>