<?xml version="1.0"?>
<package format="2">
  <name>sonar_oculus</name>
  <version>1.0.0</version>
  <description>The sonar_oculus package</description>
  <maintainer email="vsieben@slb.com">Vincent Sieben</maintainer>
  <maintainer email="pvt@mit.edu">Pedro Vaz Teixeira</maintainer>
  <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>
  <license>Schlumberger retains all rights and privledges</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>cv_bridge</depend>
  <depend>python-scipy</depend>
  <depend>nav_core</depend>

  <export> </export>
</package>
