<?xml version="1.0"?>
<package format="2">
  <name>waterlinked_gps</name>
  <version>0.0.1</version>
  <description>ROS Driver for the Waterlinked Underwater GPS</description>

  <maintainer email="mchandrasekaran@slb.com">Muthu Chandrasekaran</maintainer>
  <maintainer email="jwang92@stevens.com">Jinkun Wang</maintainer>
  <license>BSD 3-Clause License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
